--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
         <script src='index.js' defer></script>
         <link rel="stylesheet" href="index.css">
-        <title>Document</title>
+        <title>EncDenc Visuals</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
 
     <body>
