--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src='https://cdn.jsdelivr.net/gh/spuckhafte/SpuckJs@1.0.0/Spuck.min.js'></script>
         <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
+        <script src="config.js"></script>
         <script src='index.js' defer></script>
         <link rel="stylesheet" href="index.css">
         <title>EncDenc Visuals</title>
